fix timer spacing

--- a/style.css
+++ b/style.css
@@ -478,7 +478,8 @@ footer {
     max-width: 100%;
     height: 80%;
     padding-bottom: 30%;
-    margin: 30% auto;
+    margin: 0 auto;
+    margin-top: 30%;
     display: inline-block;
     text-align: left;
   }
